# vqvae

./: .gitignore  README.md  compression.py  decompression.py  example.ppc  example.txt  huffman.py  model.py  pyproject.toml
src/: my_document.txt
src/ppc/: __init__.py  cli.py  container.py  crypto.py  detect.py  ipfs.py  utils.py
tests/: test_smoke.py
